# starjaxrl

./: .gitignore  404.html  README.md  evaluate.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  train.py
.github/workflows/: docs.yml  tests.yml
api/agents/: index.html
api/environments/: index.html
api/physics/: index.html
api/training/: index.html
configs/: cartpole.yaml  network.yaml  train.yaml
configs/env/: cartpole.yaml  env.yaml
configs/ppo/: ppo.yaml
design/00_overview/: index.html
design/01_problem_spec/: index.html
design/02_simulation/: index.html
design/03_rl_algorithm/: index.html
design/04_neural_network/: index.html
design/05_training_infra/: index.html
design/06_todos/: index.html
design/07_project_plan/: index.html
docs/: index.md  training.md
docs/api/: agents.md  environments.md  physics.md  training.md
docs/design/: 00_overview.md  01_problem_spec.md  02_simulation.md  03_rl_algorithm.md  04_neural_network.md  05_training_infra.md  06_todos.md  07_project_plan.md
docs/environments/: cartpole.md  starship.md
environments/cartpole/: index.html
environments/starship/: index.html
search/: search_index.json
src/starjaxrl/: __init__.py
tests/: conftest.py  test_config.py  test_integration.py
tests/agents/: test_networks.py  test_ppo.py
tests/env/: test_cartpole_env.py  test_starship_env.py
tests/physics/: test_cartpole_dynamics.py  test_dynamics.py
tests/training/: test_checkpoint.py  test_logging.py
tests/utils/: test_visualization.py
training/: index.html
(+18 files in other folders)
