[project]
name = "starjaxrl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flax>=0.12.5",
    "gymnasium>=1.2.3",
    "jax>=0.9.1",
    "jaxlib>=0.9.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "optax>=0.2.6",
]
